Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -42,6 +42,6 @@ stages:
         azureSubscription: 'Azure for Students(3a0e51bd-e967-4dd7-ab92-0092181878ee)'
         appType: 'webAppContainer'
         WebAppName: 'gogs'
-        DockerNamespace: $(dockerRegistryServiceConnection)
+        DockerNamespace: $(containerRegistry)
         DockerRepository: $(imageRepository)
         DockerImageTag: $(tag)
