Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -20,6 +20,8 @@ variables:
   
 
 stages:
+
+
 - stage: Build
   displayName: Build and push stage
   jobs:
@@ -27,6 +29,9 @@ stages:
     displayName: Build
     pool: vsphere
     steps:
+    - task: Bash@3
+      inputs:
+        filePath: 'install-terraform.sh'
     - task: Docker@2
       displayName: Build and push an image to container registry
       inputs:
