--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -35,12 +35,11 @@ stages:
     - task: Docker@2
       displayName: Build and push an image to container registry
       inputs:
-        command: buildAndPush
-        repository: $(imageRepository)
-        dockerfile: $(dockerfilePath)
-        containerRegistry: $(containerRegistry)
-        tags: |
-          $(tag)
+        containerRegistry: 'gogsregistry'
+        repository: '$(imageRepository)'
+        command: 'buildAndPush'
+        Dockerfile: '**/Dockerfile'
+        tags: '$(tag)'
 
     - task: AzureRmWebAppDeployment@4
       inputs:
