--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -46,7 +46,7 @@ stages:
         ConnectionType: 'AzureRM'
         azureSubscription: 'Azure for Students(3a0e51bd-e967-4dd7-ab92-0092181878ee)'
         appType: 'webAppContainer'
-        WebAppName: 'gogs'
-        DockerNamespace: $(containerRegistry)
-        DockerRepository: $(imageRepository)
-        DockerImageTag: $(tag)
+        WebAppName: 'Gogs'
+        DockerNamespace: 'gogsregistry.azurecr.io'
+        DockerRepository: '$(imageRepository)'
+        DockerImageTag: '$(tag)'
