--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -32,6 +32,19 @@ stages:
     - task: Bash@3
       inputs:
         filePath: 'install-terraform.sh'
+    - task: Bash@3
+      inputs:
+        filePath: 'install-azure-cli.sh'
+    - task: Bash@3
+      inputs:
+        filePath: 'configure-named-profile.sh'
+      env:
+        AZURE_CLIENT_ID: $(AZURE_CLIENT_ID)
+        AZURE_CLIENT_SECRET: $(AZURE_CLIENT_SECRET)
+        AZURE_TENANT_ID: $(AZURE_TENANT_ID)
+    - task: Bash@3
+      inputs:
+        filePath: 'apply-terraform.sh'
     - task: Docker@2
       displayName: Build and push an image to container registry
       inputs:
