--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -35,16 +35,17 @@ stages:
     - task: Bash@3
       inputs:
         filePath: 'install-azure-cli.sh'
-    - task: Bash@3
-      inputs:
-        filePath: 'configure-named-profile.sh'
+
+    - bash: az login --service-principal --username $AZURE_CLIENT_ID --password $AZURE_CLIENT_SECRET --tenant $AZURE_TENANT_ID
       env:
-        AZURE_CLIENT_ID: $(AZURE_CLIENT_ID)
-        AZURE_CLIENT_SECRET: $(AZURE_CLIENT_SECRET)
-        AZURE_TENANT_ID: $(AZURE_TENANT_ID)
+          AZURE_CLIENT_ID: $(AZURE_CLIENT_ID)
+          AZURE_CLIENT_SECRET: $(AZURE_CLIENT_SECRET)
+          AZURE_TENANT_ID: $(AZURE_TENANT_ID)
+
     - task: Bash@3
       inputs:
         filePath: 'apply-terraform.sh'
+        
     - task: Docker@2
       displayName: Build and push an image to container registry
       inputs:
