--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -36,11 +36,17 @@ stages:
       inputs:
         filePath: 'install-azure-cli.sh'
 
-    - bash: az login --service-principal --username $AZURE_CLIENT_ID --password $AZURE_CLIENT_SECRET --tenant $AZURE_TENANT_ID
+    - bash: |
+        az login --service-principal --username $AZURE_CLIENT_ID --password $AZURE_CLIENT_SECRET --tenant $AZURE_TENANT_ID
+        export ARM_CLIENT_ID=$AZURE_CLIENT_ID
+        export ARM_CLIENT_SECRET=$AZURE_CLIENT_SECRET
+        export ARM_TENANT_ID=$AZURE_TENANT_ID
+        export ARM_SUBSCRIPTION_ID=$AZURE_SUBSCRIPTION_ID
       env:
           AZURE_CLIENT_ID: $(AZURE_CLIENT_ID)
           AZURE_CLIENT_SECRET: $(AZURE_CLIENT_SECRET)
           AZURE_TENANT_ID: $(AZURE_TENANT_ID)
+          AZURE_SUBSCRIPTION_ID: $(AZURE_SUBSCRIPTION_ID)
 
     - task: Bash@3
       inputs:
