--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -42,6 +42,8 @@ stages:
         export ARM_CLIENT_SECRET=$AZURE_CLIENT_SECRET
         export ARM_TENANT_ID=$AZURE_TENANT_ID
         export ARM_SUBSCRIPTION_ID=$AZURE_SUBSCRIPTION_ID
+        echo $ARM_SUBSCRIPTION_ID
+
       env:
           AZURE_CLIENT_ID: $(AZURE_CLIENT_ID)
           AZURE_CLIENT_SECRET: $(AZURE_CLIENT_SECRET)
