--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -38,10 +38,10 @@ stages:
 
     - bash: |
         az login --service-principal --username $AZURE_CLIENT_ID --password $AZURE_CLIENT_SECRET --tenant $AZURE_TENANT_ID
-        export ARM_CLIENT_ID=$AZURE_CLIENT_ID
-        export ARM_CLIENT_SECRET=$AZURE_CLIENT_SECRET
-        export ARM_TENANT_ID=$AZURE_TENANT_ID
-        export ARM_SUBSCRIPTION_ID=$AZURE_SUBSCRIPTION_ID
+        export ARM_CLIENT_ID="$AZURE_CLIENT_ID"
+        export ARM_CLIENT_SECRET="$AZURE_CLIENT_SECRET"
+        export ARM_TENANT_ID="$AZURE_TENANT_ID"
+        export ARM_SUBSCRIPTION_ID="$AZURE_SUBSCRIPTION_ID"
         echo $ARM_SUBSCRIPTION_ID
 
       env:
