Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -42,6 +42,7 @@ stages:
         export ARM_CLIENT_SECRET="$AZURE_CLIENT_SECRET"
         export ARM_TENANT_ID="$AZURE_TENANT_ID"
         export ARM_SUBSCRIPTION_ID="$AZURE_SUBSCRIPTION_ID"
+        export ARM_ACCESS_KEY=$AZURE_ACCOUNT_KEY
         echo $ARM_SUBSCRIPTION_ID
 
       env:
@@ -49,6 +50,7 @@ stages:
           AZURE_CLIENT_SECRET: $(AZURE_CLIENT_SECRET)
           AZURE_TENANT_ID: $(AZURE_TENANT_ID)
           AZURE_SUBSCRIPTION_ID: $(AZURE_SUBSCRIPTION_ID)
+          AZURE_ACCOUNT_KEY: $(AZURE_ACCOUNT_KEY)
 
     - task: Bash@3
       inputs:
