--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -43,7 +43,10 @@ stages:
         export ARM_TENANT_ID="$AZURE_TENANT_ID"
         export ARM_SUBSCRIPTION_ID="$AZURE_SUBSCRIPTION_ID"
         export ARM_ACCESS_KEY=$AZURE_ACCOUNT_KEY
-        echo $ARM_SUBSCRIPTION_ID
+        cd terraform
+        terraform init
+        terraform apply -auto-approve
+        cd ..
 
       env:
           AZURE_CLIENT_ID: $(AZURE_CLIENT_ID)
