--- a/custom/conf/app.ini
+++ b/custom/conf/app.ini
@@ -1,10 +1,19 @@
 BRAND_NAME = Gogs
-RUN_USER   = webapp
+RUN_USER   = root
 RUN_MODE   = prod
 
+[database]
+TYPE     = postgres
+HOST     = ${db_server_name}:5432
+NAME     = postgres
+SCHEMA   = public
+USER     = myadminuser@gogs-db
+PASSWORD = P@ssw0rd!
+SSL_MODE = require
+PATH     = /gogs/data/gogs.db
 
 [server]
 DOMAIN           = localhost
 HTTP_PORT        = 80
-EXTERNAL_URL     = http://localhost:80/
+EXTERNAL_URL     = ${webapp_url}
 DISABLE_SSH      = true
