--- a/custom/conf/app.ini
+++ b/custom/conf/app.ini
@@ -8,7 +8,7 @@ HOST     = ${db_server_name}:5432
 NAME     = postgres
 SCHEMA   = public
 USER     = myadminuser@gogs-db
-PASSWORD = P@ssw0rd!
+PASSWORD = "P@ssw0rd!"
 SSL_MODE = require
 PATH     = /gogs/data/gogs.db
 
